# Reds_Pitching_Hackathon_Team_Mendoza_Line

./: README.md  pyproject.toml  requirements.txt
data/categories/means/: elite_and_strong_mean.csv  elite_means_by_role.csv  suboptimal_mean.csv  suboptimal_means_by_role.csv
data/categories/players/: elite_and_strong_players.csv  suboptimal_players.csv
data/mismatches/: mismatches_normal.csv  mismatches_relief_sub.csv
data/quadrant/: principalDf.xlsx  q1_players.xlsx  q2_players.xlsx  q3_players.xlsx  quadrant1_SP_RP_EQUAL.xlsx  quadrant2_SP_MAJORITY.xlsx  quadrant3_RP_MAJORITY.xlsx  quadrant4_RP_MAJORITY.xlsx
data/raw/: data_dictionary.xlsx  sportsref_download.xlsx
data/streamlit/: chosen_players.csv
data/suggested_changes/: suggested_changes.csv
notebooks/: 01_baseball_savant_feature_engineering.ipynb  02_part_one_pca.ipynb  03_calculate_zscores.ipynb  04_cosine_similarity.ipynb  05_trends_and_analysis.ipynb
src/: const.py  desc.py  funcs.py  paths.py
streamlit/: cluster_profiles.py  player_profiles.py
