[tool.poetry]
name = "reds-baseball-pitching-project"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.0"
pyproject-toml = "^0.0.10"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
openpyxl = "^3.1.2"
pyspark = "^3.5.0"
nbformat = "^5.9.2"
scipy = "^1.12.0"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"
fuzzywuzzy = "^0.18.0"
streamlit = "^1.30.0"
pymc = "^5.10.3"
xgboost = "^2.0.3"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
